// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for react components Snapshot test CommentItem 1`] = `
<div
  className="postCard"
>
  <span
    className="comment-author-name"
  >
     
    Cara
    : 
  </span>
  <span
    className="comment-value"
  >
     
    thank you friends
     
  </span>
</div>
`;

exports[`Snapshot test for react components Snapshot test Contacts 1`] = `
<div
  className="contact-row"
>
  <div
    className="ant-divider ant-divider-vertical"
    role="separator"
    style={
      Object {
        "borderColor": "#E5E5E5",
        "height": "100vh",
      }
    }
  />
  <div
    className="contact-column-left"
  >
    <h1>
      Your Contacts
    </h1>
    <span
      className="ant-input-affix-wrapper"
      onMouseUp={[Function]}
    >
      <span
        className="ant-input-prefix"
      >
        <span
          aria-label="search"
          className="anticon anticon-search"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="search"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
            />
          </svg>
        </span>
      </span>
      <input
        className="ant-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="search your contacts"
        style={null}
        type="text"
        value=""
      />
    </span>
    <ul
      className="list"
      id="contactsList"
    >
      <div
        className="css-view-1dbjc4n r-flex-13awgt0 r-height-1202g5r r-paddingBottom-97e31f r-paddingLeft-bv2aro r-paddingRight-hxflta r-paddingTop-10xqauy"
      >
        <div
          className="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
          onScroll={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          onWheel={[Function]}
        >
          <div
            className="css-view-1dbjc4n"
          />
        </div>
      </div>
    </ul>
  </div>
  <div
    className="ant-divider ant-divider-vertical"
    role="separator"
    style={
      Object {
        "borderColor": "#E5E5E5",
        "height": "100vh",
      }
    }
  />
  <div
    className="contact-column-right"
  >
    <h1>
      Search New Contacts
    </h1>
    <div>
      <span
        className="ant-input-affix-wrapper"
        onMouseUp={[Function]}
      >
        <span
          className="ant-input-prefix"
        >
          <span
            aria-label="user-add"
            className="anticon anticon-user-add"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="user-add"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M678.3 642.4c24.2-13 51.9-20.4 81.4-20.4h.1c3 0 4.4-3.6 2.2-5.6a371.67 371.67 0 00-103.7-65.8c-.4-.2-.8-.3-1.2-.5C719.2 505 759.6 431.7 759.6 349c0-137-110.8-248-247.5-248S264.7 212 264.7 349c0 82.7 40.4 156 102.6 201.1-.4.2-.8.3-1.2.5-44.7 18.9-84.8 46-119.3 80.6a373.42 373.42 0 00-80.4 119.5A373.6 373.6 0 00137 888.8a8 8 0 008 8.2h59.9c4.3 0 7.9-3.5 8-7.8 2-77.2 32.9-149.5 87.6-204.3C357 628.2 432.2 597 512.2 597c56.7 0 111.1 15.7 158 45.1a8.1 8.1 0 008.1.3zM512.2 521c-45.8 0-88.9-17.9-121.4-50.4A171.2 171.2 0 01340.5 349c0-45.9 17.9-89.1 50.3-121.6S466.3 177 512.2 177s88.9 17.9 121.4 50.4A171.2 171.2 0 01683.9 349c0 45.9-17.9 89.1-50.3 121.6C601.1 503.1 558 521 512.2 521zM880 759h-84v-84c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v84h-84c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h84v84c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-84h84c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </span>
        </span>
        <input
          className="ant-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="search new contacts"
          style={null}
          type="text"
          value=""
        />
      </span>
    </div>
    <ul
      className="list"
    >
      <div
        className="css-view-1dbjc4n r-flex-13awgt0 r-height-1202g5r r-paddingBottom-97e31f r-paddingLeft-bv2aro r-paddingRight-hxflta r-paddingTop-10xqauy"
      >
        <div
          className="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
          onScroll={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          onWheel={[Function]}
        >
          <div
            className="css-view-1dbjc4n"
          />
        </div>
      </div>
    </ul>
  </div>
</div>
`;

exports[`Snapshot test for react components Snapshot test Home 1`] = `
<div
  id="mainBoard"
>
  <button
    className="ant-btn ant-btn-primary ant-btn-round"
    id="postBtn"
    onClick={[Function]}
    type="button"
  >
    <span>
      Post
    </span>
  </button>
  <span
    className="placeHolder"
  >
     Share a moment of beauty! 
  </span>
  <div
    className="ant-divider ant-divider-horizontal"
    role="separator"
  />
  <div
    className="css-view-1dbjc4n r-flex-13awgt0 r-height-h06w64 r-paddingBottom-97e31f r-paddingLeft-bv2aro r-paddingRight-hxflta r-paddingTop-10xqauy"
  >
    <div
      className="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
      onScroll={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      onWheel={[Function]}
    >
      <div
        className="css-view-1dbjc4n"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot test for react components Snapshot test LoginForm 1`] = `
<main
  className="ant-layout-content"
>
  <h1
    className="ant-typography"
    style={
      Object {
        "WebkitLineClamp": undefined,
      }
    }
  >
     Login Page 
  </h1>
  <div
    className="site-layout-content"
  >
    <form
      className="ant-form ant-form-vertical"
      id="basic"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-8 ant-col-offset-4 ant-form-item-label"
          style={Object {}}
        >
          <label
            className="ant-form-item-required"
            htmlFor="basic_name"
            title="Name"
          >
            Name
          </label>
        </div>
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <input
                className="ant-input ant-input-lg"
                id="loginName"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-8 ant-col-offset-4 ant-form-item-label"
          style={Object {}}
        >
          <label
            className="ant-form-item-required"
            htmlFor="basic_password"
            title="Password"
          >
            Password
          </label>
        </div>
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <span
                className="ant-input-affix-wrapper ant-input-affix-wrapper-lg ant-input-password ant-input-password-large"
                onMouseUp={[Function]}
              >
                <input
                  action="click"
                  className="ant-input ant-input-lg"
                  id="loginPassword"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  style={null}
                  type="password"
                  value=""
                />
                <span
                  className="ant-input-suffix"
                >
                  <span
                    aria-label="eye-invisible"
                    className="anticon anticon-eye-invisible ant-input-password-icon"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    role="img"
                    tabIndex={-1}
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="eye-invisible"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                      />
                      <path
                        d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <button
                className="ant-btn ant-btn-primary"
                id="loginBtn"
                onClick={[Function]}
                type="submit"
              >
                <span>
                  Submit
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              Don't have an account?
              <div
                onClick={[Function]}
                style={
                  Object {
                    "color": "blue",
                  }
                }
              >
                Sign Up
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              Fogret password?
              <div
                onClick={[Function]}
                style={
                  Object {
                    "color": "blue",
                  }
                }
              >
                Reset password
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</main>
`;

exports[`Snapshot test for react components Snapshot test MainPage 1`] = `
<section
  className="ant-layout ant-layout-has-sider"
  style={
    Object {
      "height": "100vh",
      "width": "100wh",
    }
  }
>
  <aside
    className="ant-layout-sider ant-layout-sider-light"
    style={
      Object {
        "flex": "0 0 200px",
        "maxWidth": "200px",
        "minWidth": "200px",
        "width": "200px",
      }
    }
  >
    <div
      className="ant-layout-sider-children"
    >
      <div
        className="logo"
      >
        <a
          className="ant-dropdown-trigger ant-dropdown-link"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
        >
          <span
            className="ant-avatar ant-avatar-lg ant-avatar-circle"
            style={
              Object {
                "backgroundColor": "#2ECC71",
                "verticalAlign": "middle",
              }
            }
          >
            <span
              className="ant-avatar-string"
              style={
                Object {
                  "WebkitTransform": "scale(1) translateX(-50%)",
                  "msTransform": "scale(1) translateX(-50%)",
                  "transform": "scale(1) translateX(-50%)",
                }
              }
            >
              A
            </span>
          </span>
           
          <span
            className="name"
          >
             
            Alex
             
          </span>
        </a>
      </div>
      <ul
        className="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
        onMouseEnter={[Function]}
        onTransitionEnd={[Function]}
        role="menu"
        style={Object {}}
      >
        <li
          className="ant-menu-item ant-menu-item-selected"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "paddingLeft": 24,
            }
          }
        >
          <span
            aria-label="home"
            className="anticon anticon-home ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="home"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
              />
            </svg>
          </span>
          <span>
            <span>
              Home
            </span>
            <a
              href="/"
              onClick={[Function]}
            />
          </span>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "paddingLeft": 24,
            }
          }
        >
          <span
            aria-label="contacts"
            className="anticon anticon-contacts ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="contacts"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M594.3 601.5a111.8 111.8 0 0029.1-75.5c0-61.9-49.9-112-111.4-112s-111.4 50.1-111.4 112c0 29.1 11 55.5 29.1 75.5a158.09 158.09 0 00-74.6 126.1 8 8 0 008 8.4H407c4.2 0 7.6-3.3 7.9-7.5 3.8-50.6 46-90.5 97.2-90.5s93.4 40 97.2 90.5c.3 4.2 3.7 7.5 7.9 7.5H661a8 8 0 008-8.4c-2.8-53.3-32-99.7-74.7-126.1zM512 578c-28.5 0-51.7-23.3-51.7-52s23.2-52 51.7-52 51.7 23.3 51.7 52-23.2 52-51.7 52zm416-354H768v-56c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v56H548v-56c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v56H328v-56c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v56H96c-17.7 0-32 14.3-32 32v576c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V256c0-17.7-14.3-32-32-32zm-40 568H136V296h120v56c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-56h148v56c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-56h148v56c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-56h120v496z"
              />
            </svg>
          </span>
          <span>
            <span>
              Contacts
            </span>
            <a
              href="/contacts"
              onClick={[Function]}
            />
          </span>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "paddingLeft": 24,
            }
          }
        >
          <span
            aria-label="message"
            className="anticon anticon-message ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="message"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M464 512a48 48 0 1096 0 48 48 0 10-96 0zm200 0a48 48 0 1096 0 48 48 0 10-96 0zm-400 0a48 48 0 1096 0 48 48 0 10-96 0zm661.2-173.6c-22.6-53.7-55-101.9-96.3-143.3a444.35 444.35 0 00-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9a445.35 445.35 0 00-142 96.5c-40.9 41.3-73 89.3-95.2 142.8-23 55.4-34.6 114.3-34.3 174.9A449.4 449.4 0 00112 714v152a46 46 0 0046 46h152.1A449.4 449.4 0 00510 960h2.1c59.9 0 118-11.6 172.7-34.3a444.48 444.48 0 00142.8-95.2c41.3-40.9 73.8-88.7 96.5-142 23.6-55.2 35.6-113.9 35.9-174.5.3-60.9-11.5-120-34.8-175.6zm-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8 69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9 44.6 18.7 84.6 45.6 119 80 34.3 34.3 61.3 74.4 80 119 19.4 46.2 29.1 95.2 28.9 145.8-.6 99.6-39.7 192.9-110.1 262.7z"
              />
            </svg>
          </span>
          <span>
            <span>
              Messages
            </span>
            <a
              href="/messages"
              onClick={[Function]}
            />
          </span>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "paddingLeft": 24,
            }
          }
        >
          <span
            aria-label="video-camera"
            className="anticon anticon-video-camera ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="video-camera"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M912 302.3L784 376V224c0-35.3-28.7-64-64-64H128c-35.3 0-64 28.7-64 64v576c0 35.3 28.7 64 64 64h592c35.3 0 64-28.7 64-64V648l128 73.7c21.3 12.3 48-3.1 48-27.6V330c0-24.6-26.7-40-48-27.7zM712 792H136V232h576v560zm176-167l-104-59.8V458.9L888 399v226zM208 360h112c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H208c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8z"
              />
            </svg>
          </span>
          <span>
            <span>
              Lives
            </span>
            <a
              href="/lives"
              onClick={[Function]}
            />
          </span>
        </li>
        <li
          className="ant-menu-item"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="menuitem"
          style={
            Object {
              "paddingLeft": 24,
            }
          }
        >
          <span
            aria-label="profile"
            className="anticon anticon-profile ant-menu-item-icon"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="profile"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656zM492 400h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H492c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8zm0 144h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H492c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8zm0 144h184c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8H492c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8zM340 368a40 40 0 1080 0 40 40 0 10-80 0zm0 144a40 40 0 1080 0 40 40 0 10-80 0zm0 144a40 40 0 1080 0 40 40 0 10-80 0z"
              />
            </svg>
          </span>
          <span>
            <span>
              Profile
            </span>
            <a
              href="/profile"
              onClick={[Function]}
            />
          </span>
        </li>
      </ul>
    </div>
  </aside>
  <section
    className="ant-layout site-layout"
  >
    <main
      className="ant-layout-content site-layout-background"
      style={
        Object {
          "margin": "0px 0px",
          "minHeight": 280,
          "padding": 0,
        }
      }
    >
      <div
        id="mainBoard"
      >
        <button
          className="ant-btn ant-btn-primary ant-btn-round"
          id="postBtn"
          onClick={[Function]}
          type="button"
        >
          <span>
            Post
          </span>
        </button>
        <span
          className="placeHolder"
        >
           Share a moment of beauty! 
        </span>
        <div
          className="ant-divider ant-divider-horizontal"
          role="separator"
        />
        <div
          className="css-view-1dbjc4n r-flex-13awgt0 r-height-h06w64 r-paddingBottom-97e31f r-paddingLeft-bv2aro r-paddingRight-hxflta r-paddingTop-10xqauy"
        >
          <div
            className="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
            onScroll={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            onWheel={[Function]}
          >
            <div
              className="css-view-1dbjc4n"
            />
          </div>
        </div>
      </div>
    </main>
  </section>
</section>
`;

exports[`Snapshot test for react components Snapshot test Messages 1`] = `
<div
  className="message-row"
>
  <div
    className="message-column-left"
  >
    <button
      className="ant-btn ant-btn-primary"
      onClick={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
      type="button"
    >
      <span
        aria-label="user-add"
        className="anticon anticon-user-add"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="user-add"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M678.3 642.4c24.2-13 51.9-20.4 81.4-20.4h.1c3 0 4.4-3.6 2.2-5.6a371.67 371.67 0 00-103.7-65.8c-.4-.2-.8-.3-1.2-.5C719.2 505 759.6 431.7 759.6 349c0-137-110.8-248-247.5-248S264.7 212 264.7 349c0 82.7 40.4 156 102.6 201.1-.4.2-.8.3-1.2.5-44.7 18.9-84.8 46-119.3 80.6a373.42 373.42 0 00-80.4 119.5A373.6 373.6 0 00137 888.8a8 8 0 008 8.2h59.9c4.3 0 7.9-3.5 8-7.8 2-77.2 32.9-149.5 87.6-204.3C357 628.2 432.2 597 512.2 597c56.7 0 111.1 15.7 158 45.1a8.1 8.1 0 008.1.3zM512.2 521c-45.8 0-88.9-17.9-121.4-50.4A171.2 171.2 0 01340.5 349c0-45.9 17.9-89.1 50.3-121.6S466.3 177 512.2 177s88.9 17.9 121.4 50.4A171.2 171.2 0 01683.9 349c0 45.9-17.9 89.1-50.3 121.6C601.1 503.1 558 521 512.2 521zM880 759h-84v-84c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v84h-84c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h84v84c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-84h84c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
      <span>
         Chat with a New Contact
      </span>
    </button>
    <span
      className="ant-input-affix-wrapper"
      onMouseUp={[Function]}
    >
      <span
        className="ant-input-prefix"
      >
        <span
          aria-label="search"
          className="anticon anticon-search"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="search"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
            />
          </svg>
        </span>
      </span>
      <input
        className="ant-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="search current contacts"
        style={null}
        type="text"
        value=""
      />
    </span>
    <div
      className="css-view-1dbjc4n r-flex-13awgt0 r-height-zh076v r-paddingBottom-97e31f r-paddingLeft-bv2aro r-paddingRight-hxflta r-paddingTop-10xqauy"
    >
      <div
        className="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
        onScroll={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        onWheel={[Function]}
      >
        <div
          className="css-view-1dbjc4n"
        />
      </div>
    </div>
  </div>
  <div
    className="ant-divider ant-divider-vertical"
    role="separator"
    style={
      Object {
        "borderColor": "#E5E5E5",
        "height": "100vh",
        "margin": 0,
      }
    }
  />
  <div
    className="message-column-right"
  />
</div>
`;

exports[`Snapshot test for react components Snapshot test NewPost 1`] = `
Array [
  <button
    className="ant-btn ant-btn-primary ant-btn-round"
    id="postBtn"
    onClick={[Function]}
    type="button"
  >
    <span>
      Post
    </span>
  </button>,
  <span
    className="placeHolder"
  >
     Share a moment of beauty! 
  </span>,
]
`;

exports[`Snapshot test for react components Snapshot test PostArea 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-height-h06w64 r-paddingBottom-97e31f r-paddingLeft-bv2aro r-paddingRight-hxflta r-paddingTop-10xqauy"
>
  <div
    className="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    onWheel={[Function]}
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="postCard"
        >
          <div
            className="ant-card ant-card-bordered ant-card-hoverable"
          >
            <div
              className="ant-card-body"
              style={Object {}}
            >
              <div
                className="ant-comment"
              >
                <div
                  className="ant-comment-inner"
                >
                  <div
                    className="ant-comment-avatar"
                  >
                    <span
                      className="ant-avatar ant-avatar-lg ant-avatar-circle"
                      style={
                        Object {
                          "backgroundColor": "#2ECC71",
                          "verticalAlign": "middle",
                        }
                      }
                    >
                      <span
                        className="ant-avatar-string"
                        style={
                          Object {
                            "opacity": 0,
                          }
                        }
                      >
                        A
                      </span>
                    </span>
                  </div>
                  <div
                    className="ant-comment-content"
                  >
                    <div
                      className="ant-comment-content-author"
                    >
                      <span
                        className="ant-comment-content-author-name"
                      >
                        <a>
                           
                          Alex
                        </a>
                      </span>
                      <span
                        className="ant-comment-content-author-time"
                      >
                        <span
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          8 days ago
                        </span>
                      </span>
                    </div>
                    <div
                      className="ant-comment-content-detail"
                    >
                      <p>
                        I'm Alex, this is the 1st post.
                      </p>
                      <div
                        className="ant-image"
                        onClick={[Function]}
                        style={
                          Object {
                            "height": undefined,
                            "width": 200,
                          }
                        }
                      >
                        <img
                          className="ant-image-img"
                          onError={[Function]}
                          onLoad={[Function]}
                          src={null}
                          style={
                            Object {
                              "height": undefined,
                            }
                          }
                        />
                        <div
                          className="ant-image-mask"
                        >
                          <div
                            className="ant-image-mask-info"
                          >
                            <span
                              aria-label="eye"
                              className="anticon anticon-eye"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="eye"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                                />
                              </svg>
                            </span>
                            Preview
                          </div>
                        </div>
                      </div>
                      <div
                        className="ant-dropdown-trigger post-dropdown"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <a
                          onClick={[Function]}
                        >
                          ...
                        </a>
                      </div>
                      <div
                        className="ant-divider ant-divider-horizontal"
                        role="separator"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot test for react components Snapshot test PostCard 1`] = `
<div
  className="postCard"
>
  <div
    className="ant-card ant-card-bordered ant-card-hoverable"
  >
    <div
      className="ant-card-body"
      style={Object {}}
    >
      <div
        className="ant-comment"
      >
        <div
          className="ant-comment-inner"
        >
          <div
            className="ant-comment-avatar"
          >
            <span
              className="ant-avatar ant-avatar-lg ant-avatar-circle"
              style={
                Object {
                  "backgroundColor": "#2ECC71",
                  "verticalAlign": "middle",
                }
              }
            >
              <span
                className="ant-avatar-string"
                style={
                  Object {
                    "WebkitTransform": "scale(1) translateX(-50%)",
                    "msTransform": "scale(1) translateX(-50%)",
                    "transform": "scale(1) translateX(-50%)",
                  }
                }
              >
                A
              </span>
            </span>
          </div>
          <div
            className="ant-comment-content"
          >
            <div
              className="ant-comment-content-author"
            >
              <span
                className="ant-comment-content-author-name"
              >
                <a>
                   
                  Alex
                </a>
              </span>
              <span
                className="ant-comment-content-author-time"
              >
                <span
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  8 days ago
                </span>
              </span>
            </div>
            <div
              className="ant-comment-content-detail"
            >
              <p>
                I'm Alex, this is the 1st post.
              </p>
              <div
                className="ant-image"
                onClick={[Function]}
                style={
                  Object {
                    "height": undefined,
                    "width": 200,
                  }
                }
              >
                <img
                  className="ant-image-img"
                  onError={[Function]}
                  onLoad={[Function]}
                  src={null}
                  style={
                    Object {
                      "height": undefined,
                    }
                  }
                />
                <div
                  className="ant-image-mask"
                >
                  <div
                    className="ant-image-mask-info"
                  >
                    <span
                      aria-label="eye"
                      className="anticon anticon-eye"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="eye"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M942.2 486.2C847.4 286.5 704.1 186 512 186c-192.2 0-335.4 100.5-430.2 300.3a60.3 60.3 0 000 51.5C176.6 737.5 319.9 838 512 838c192.2 0 335.4-100.5 430.2-300.3 7.7-16.2 7.7-35 0-51.5zM512 766c-161.3 0-279.4-81.8-362.7-254C232.6 339.8 350.7 258 512 258c161.3 0 279.4 81.8 362.7 254C791.5 684.2 673.4 766 512 766zm-4-430c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm0 288c-61.9 0-112-50.1-112-112s50.1-112 112-112 112 50.1 112 112-50.1 112-112 112z"
                        />
                      </svg>
                    </span>
                    Preview
                  </div>
                </div>
              </div>
              <div
                className="ant-dropdown-trigger post-dropdown"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <a
                  onClick={[Function]}
                >
                  ...
                </a>
              </div>
              <div
                className="ant-divider ant-divider-horizontal"
                role="separator"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot test for react components Snapshot test Profile 1`] = `
<div
  id="profileBoard"
>
  <div
    className="ant-descriptions"
  >
    <div
      className="ant-descriptions-header"
    >
      <div
        className="ant-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      className="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            className="ant-descriptions-row"
          >
            <td
              className="ant-descriptions-item"
              colSpan={1}
            >
              <div
                className="ant-descriptions-item-container"
              >
                
                <span
                  className="ant-descriptions-item-content"
                  style={Object {}}
                >
                  <span
                    className="ant-avatar ant-avatar-lg ant-avatar-circle"
                    style={
                      Object {
                        "backgroundColor": "#2ECC71",
                        "verticalAlign": "middle",
                      }
                    }
                  >
                    <span
                      className="ant-avatar-string"
                      style={
                        Object {
                          "WebkitTransform": "scale(1) translateX(-50%)",
                          "msTransform": "scale(1) translateX(-50%)",
                          "transform": "scale(1) translateX(-50%)",
                        }
                      }
                    >
                      A
                    </span>
                  </span>
                </span>
              </div>
            </td>
            <td
              className="ant-descriptions-item"
              colSpan={1}
            >
              <div
                className="ant-descriptions-item-container"
              >
                <span
                  className="ant-descriptions-item-label"
                  style={Object {}}
                >
                  Username
                </span>
                <span
                  className="ant-descriptions-item-content"
                  style={Object {}}
                >
                  Alex
                </span>
              </div>
            </td>
          </tr>
          <tr
            className="ant-descriptions-row"
          >
            <td
              className="ant-descriptions-item"
              colSpan={1}
            >
              <div
                className="ant-descriptions-item-container"
              >
                
              </div>
            </td>
            <td
              className="ant-descriptions-item"
              colSpan={1}
            >
              <div
                className="ant-descriptions-item-container"
              >
                <span
                  className="ant-descriptions-item-label"
                  style={Object {}}
                >
                  Registration date
                </span>
                <span
                  className="ant-descriptions-item-content"
                  style={Object {}}
                >
                  Invalid date
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    className="ant-divider ant-divider-horizontal"
    role="separator"
  />
  <div
    className="ant-descriptions"
  >
    <div
      className="ant-descriptions-header"
    >
      <div
        className="ant-descriptions-title"
      >
        Settings
      </div>
    </div>
    <div
      className="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            className="ant-descriptions-row"
          >
            <td
              className="ant-descriptions-item"
              colSpan={1}
            >
              <div
                className="ant-descriptions-item-container"
              >
                
                <span
                  className="ant-descriptions-item-content"
                  style={Object {}}
                >
                  <button
                    className="ant-btn ant-btn-primary ant-btn-round"
                    onClick={[Function]}
                    type="button"
                  >
                    <span>
                      Reset Password
                    </span>
                  </button>
                </span>
              </div>
            </td>
            <td
              className="ant-descriptions-item"
              colSpan={1}
            >
              <div
                className="ant-descriptions-item-container"
              >
                
                <span
                  className="ant-descriptions-item-content"
                  style={Object {}}
                >
                  <button
                    className="ant-btn ant-btn-round ant-btn-dangerous"
                    onClick={[Function]}
                    type="button"
                  >
                    <span>
                      Deactivate
                    </span>
                  </button>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Snapshot test for react components Snapshot test RegistrationForm 1`] = `
<main
  className="ant-layout-content"
>
  <h1
    className="ant-typography"
    style={
      Object {
        "WebkitLineClamp": undefined,
      }
    }
  >
     Registration Page 
  </h1>
  <div
    className="site-layout-content"
  >
    <form
      className="ant-form ant-form-vertical"
      id="registration-form"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-8 ant-col-offset-4 ant-form-item-label"
          style={Object {}}
        >
          <label
            className="ant-form-item-required"
            htmlFor="registration-form_name"
            title="Name"
          >
            Name
          </label>
        </div>
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <input
                className="ant-input"
                id="registration-form_name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "width": 500,
                  }
                }
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-8 ant-col-offset-4 ant-form-item-label"
          style={Object {}}
        >
          <label
            className="ant-form-item-required"
            htmlFor="registration-form_password"
            title="Password"
          >
            Password
          </label>
        </div>
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <span
                className="ant-input-affix-wrapper ant-input-password"
                onMouseUp={[Function]}
                style={
                  Object {
                    "width": 500,
                  }
                }
              >
                <input
                  action="click"
                  className="ant-input"
                  id="registration-form_password"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  style={null}
                  type="password"
                  value=""
                />
                <span
                  className="ant-input-suffix"
                >
                  <span
                    aria-label="eye-invisible"
                    className="anticon anticon-eye-invisible ant-input-password-icon"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    role="img"
                    tabIndex={-1}
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="eye-invisible"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                      />
                      <path
                        d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-8 ant-col-offset-4 ant-form-item-label"
          style={Object {}}
        >
          <label
            className=""
            htmlFor="registration-form_safe"
            title="Safe question"
          >
            Safe question
          </label>
        </div>
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                className="ant-select ant-select-single ant-select-show-arrow"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                style={
                  Object {
                    "width": 500,
                  }
                }
              >
                <div
                  className="ant-select-selector"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                >
                  <span
                    className="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="registration-form_safe_list_0"
                      aria-autocomplete="list"
                      aria-controls="registration-form_safe_list"
                      aria-haspopup="listbox"
                      aria-owns="registration-form_safe_list"
                      autoComplete="off"
                      className="ant-select-selection-search-input"
                      id="registration-form_safe"
                      onChange={[Function]}
                      onCompositionEnd={[Function]}
                      onCompositionStart={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onPaste={[Function]}
                      readOnly={true}
                      role="combobox"
                      style={
                        Object {
                          "opacity": 0,
                        }
                      }
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    className="ant-select-selection-item"
                    title="What is your major?"
                  >
                    What is your major?
                  </span>
                </div>
                <span
                  aria-hidden={true}
                  className="ant-select-arrow"
                  onMouseDown={[Function]}
                  style={
                    Object {
                      "WebkitUserSelect": "none",
                      "userSelect": "none",
                    }
                  }
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    className="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-8 ant-col-offset-4 ant-form-item-label"
          style={Object {}}
        >
          <label
            className="ant-form-item-required"
            htmlFor="registration-form_answer"
            title="Answer"
          >
            Answer
          </label>
        </div>
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <input
                className="ant-input"
                id="registration-form_answer"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "width": 500,
                  }
                }
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <button
                className="ant-btn ant-btn-primary"
                onClick={[Function]}
                type="submit"
              >
                <span>
                  Submit
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              Already have an account?  
              <div
                onClick={[Function]}
                style={
                  Object {
                    "color": "blue",
                  }
                }
              >
                Sign In
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</main>
`;

exports[`Snapshot test for react components Snapshot test ResetPasswordForm 1`] = `
<main
  className="ant-layout-content"
>
  <h1
    className="ant-typography"
    style={
      Object {
        "WebkitLineClamp": undefined,
      }
    }
  >
     Reset Password 
  </h1>
  <div
    className="site-layout-content"
  >
    <form
      className="ant-form ant-form-vertical"
      id="reset-password-form"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-8 ant-col-offset-4 ant-form-item-label"
          style={Object {}}
        >
          <label
            className="ant-form-item-required"
            htmlFor="reset-password-form_name"
            title="Name"
          >
            Name
          </label>
        </div>
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <input
                className="ant-input"
                id="reset-password-form_name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "width": 500,
                  }
                }
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-8 ant-col-offset-4 ant-form-item-label"
          style={Object {}}
        >
          <label
            className="ant-form-item-required"
            htmlFor="reset-password-form_password"
            title="New password"
          >
            New password
          </label>
        </div>
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <span
                className="ant-input-affix-wrapper ant-input-password"
                onMouseUp={[Function]}
                style={
                  Object {
                    "width": 500,
                  }
                }
              >
                <input
                  action="click"
                  className="ant-input"
                  id="reset-password-form_password"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  style={null}
                  type="password"
                  value=""
                />
                <span
                  className="ant-input-suffix"
                >
                  <span
                    aria-label="eye-invisible"
                    className="anticon anticon-eye-invisible ant-input-password-icon"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    role="img"
                    tabIndex={-1}
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="eye-invisible"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                      />
                      <path
                        d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                      />
                    </svg>
                  </span>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-8 ant-col-offset-4 ant-form-item-label"
          style={Object {}}
        >
          <label
            className=""
            htmlFor="reset-password-form_safe"
            title="Your safe question"
          >
            Your safe question
          </label>
        </div>
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <div
                className="ant-select ant-select-single ant-select-show-arrow"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                style={
                  Object {
                    "width": 500,
                  }
                }
              >
                <div
                  className="ant-select-selector"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                >
                  <span
                    className="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="reset-password-form_safe_list_0"
                      aria-autocomplete="list"
                      aria-controls="reset-password-form_safe_list"
                      aria-haspopup="listbox"
                      aria-owns="reset-password-form_safe_list"
                      autoComplete="off"
                      className="ant-select-selection-search-input"
                      id="reset-password-form_safe"
                      onChange={[Function]}
                      onCompositionEnd={[Function]}
                      onCompositionStart={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onPaste={[Function]}
                      readOnly={true}
                      role="combobox"
                      style={
                        Object {
                          "opacity": 0,
                        }
                      }
                      type="search"
                      unselectable="on"
                      value=""
                    />
                  </span>
                  <span
                    className="ant-select-selection-item"
                    title="What is your major?"
                  >
                    What is your major?
                  </span>
                </div>
                <span
                  aria-hidden={true}
                  className="ant-select-arrow"
                  onMouseDown={[Function]}
                  style={
                    Object {
                      "WebkitUserSelect": "none",
                      "userSelect": "none",
                    }
                  }
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    className="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-8 ant-col-offset-4 ant-form-item-label"
          style={Object {}}
        >
          <label
            className="ant-form-item-required"
            htmlFor="reset-password-form_answer"
            title="Answer to safe question"
          >
            Answer to safe question
          </label>
        </div>
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <input
                className="ant-input"
                id="reset-password-form_answer"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "width": 500,
                  }
                }
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              <button
                className="ant-btn ant-btn-primary"
                onClick={[Function]}
                type="submit"
              >
                <span>
                  Submit
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="ant-row ant-form-item"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-16 ant-col-offset-4 ant-form-item-control"
          style={Object {}}
        >
          <div
            className="ant-form-item-control-input"
          >
            <div
              className="ant-form-item-control-input-content"
            >
              Already have an account?  
              <div
                onClick={[Function]}
                style={
                  Object {
                    "color": "blue",
                  }
                }
              >
                Sign In
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</main>
`;

exports[`Snapshot test for react components Snapshot test Webavatar 1`] = `
<span
  className="ant-avatar ant-avatar-lg ant-avatar-circle"
  style={
    Object {
      "backgroundColor": "#2ECC71",
      "verticalAlign": "middle",
    }
  }
>
  <span
    className="ant-avatar-string"
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    A
  </span>
</span>
`;
